--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4"
+    "react-redux": "^8.0.4",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
