--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^8.0.4",
+    "react-router-dom": "^6.20.1",
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.3"
   },
